opam-version: "2.0"
name:         "hxd"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/dinosaure/hxd"
bug-reports:  "https://github.com/dinosaure/hxd/issues"
dev-repo:     "git+https://github.com/dinosaure/hxd.git"
doc:          "https://dinosaure.github.io/hxd/"
license:      "MIT"
synopsis:     "Hexdump in OCaml"
description: """Please, help me to debug ocaml-git
"""

build: [
  [ "dune" "subst" ]
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "-p" name "-j" jobs ] {with-test}
]

depends: [
  "ocaml"      {>= "4.06.0"}
  "dune"       {build}
  "base-bytes"
  "base-bigarray"
  "base-unix"
  "angstrom" {>= "0.11.0"}
  "rresult"
  "fmt"
  "cmdliner"
  "fpath"
]
